--- a/sass/styles.css
+++ b/sass/styles.css
@@ -133,7 +133,8 @@ body {
 .restaurants .restaurant__image {
   width: 100%;
   height: 180px;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .restaurants .restaurant__info {
   align-items: center;
@@ -174,6 +175,4 @@ body {
 }
 .footer i {
   font-size: 14px;
-}
-
-/*# sourceMappingURL=styles.css.map */
+}/*# sourceMappingURL=styles.css.map */
