Ajout du css menus

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,12 +11,12 @@ body {
   justify-content: center;
 }
 .header__logo {
-  padding-top: 40px;
+  padding-top: 20px;
 }
 
 .intro {
   text-align: center;
-  padding: 30px;
+  padding: 18px;
 }
 .intro__location {
   display: flex;
@@ -26,8 +26,8 @@ body {
   box-shadow: 0 7px 10px rgba(0, 0, 0, 0.3);
 }
 .intro__location-icon {
-  margin-right: 30px;
-  font-size: 35px;
+  margin-right: 20px;
+  font-size: 25px;
   color: #3b3a39;
 }
 .intro__location-text {
@@ -158,7 +158,7 @@ body {
   padding: 30px 20px;
 }
 .footer__logo {
-  font-family: "Shrikhand", cursive;
+  font-family: "Shrikhand";
   font-size: 18px;
   margin-bottom: 20px;
 }
