--- a/css/menu.css
+++ b/css/menu.css
@@ -1,7 +1,3 @@
-$main-color: #9356DC;
-$second-color: #FF79DA;
-$third-color: #99E2D0;
-
 * {
   box-sizing: border-box;
 }
@@ -10,31 +6,32 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
-
 .header {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  padding: 15px;
+  padding: 15px 5px;
   background: white;
   position: relative;
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
-
-  &__logo {
-    font-family: "Shrikhand";
-    font-size: 22px;
-  }
+}
+.header__logo {
+  font-family: "Shrikhand";
+  font-size: 22px;
+  margin-right: 49px;
+  display: flex;
+  align-items: center;
+}
+.header__logo img {
+  max-width: 200px;
 }
 
-
 .menu__arrow {
-  position: absolute;
-  left: 15px;
   font-size: 22px;
   color: black;
   cursor: pointer;
+  padding: 0px 15px;
 }
-
 
 .menu__img img {
   width: 100%;
@@ -42,28 +39,25 @@ body {
   object-fit: cover;
 }
 
-
 .menu__info {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 20px;
   background-color: white;
-  border-radius: 15px 15px 0 0;
-
+  border-radius: 20px 20px 0 0;
   position: relative;
 }
 
 .menu__name {
   font-family: "Shrikhand";
-  font-size: 24px;
+  font-size: 29px;
 }
 
 .menu__heart {
   font-size: 24px;
   cursor: pointer;
 }
-
 
 .menu__category {
   padding: 20px;
@@ -73,11 +67,10 @@ body {
   font-size: 18px;
   font-weight: bold;
   margin-bottom: 15px;
-  border-bottom: 3px solid $third-color;
+  border-bottom: 3px solid #99E2D0;
   padding-bottom: 5px;
   width: fit-content;
 }
-
 
 .menu__list {
   display: flex;
@@ -93,31 +86,26 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-
-  &-text {
-    display: flex;
-    flex-direction: column;
-  }
-
-  &-name {
-    font-weight: bold;
-    font-size: 16px;
-  }
-
-  &-description {
-    font-size: 14px;
-    color: gray;
-  }
-
-  &-price {
-    font-weight: bold;
-    font-size: 16px;
-  }
+}
+.menu__item-text {
+  display: flex;
+  flex-direction: column;
+}
+.menu__item-name {
+  font-weight: bold;
+  font-size: 16px;
+}
+.menu__item-description {
+  font-size: 14px;
+  color: gray;
+}
+.menu__item-price {
+  font-weight: bold;
+  font-size: 16px;
 }
 
-
 .button__intro {
-  background: linear-gradient($main-color, $second-color);
+  background: linear-gradient(#9356DC, #FF79DA);
   border-radius: 50px;
   padding: 15px 25px;
   font-size: 18px;
@@ -129,32 +117,28 @@ body {
   border: none;
 }
 
-
 .footer {
-    background: rgba(53, 53, 53, 1);
-    color: white;
-    padding: 30px 20px;
-  
-    &__logo {
-      font-family: "Shrikhand", cursive;
-      font-size: 18px;
-      margin-bottom: 20px;
-    }
-  
-    &__menu {
-      display: flex;
-      flex-direction: column;
-    }
-  
-    &__item {
-      font-size: 16px;
-      display: flex;
-      align-items: center;
-      gap: 10px;
-    }
-  
-    i {
-      font-size: 14px;
-    }
-  }
+  background: rgb(53, 53, 53);
+  color: white;
+  padding: 30px 20px;
+}
+.footer__logo {
+  font-family: "Shrikhand", cursive;
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+.footer__menu {
+  display: flex;
+  flex-direction: column;
+}
+.footer__item {
+  font-size: 16px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.footer i {
+  font-size: 14px;
+}
 
+/*# sourceMappingURL=menu.css.map */
