--- a/css/styles.css
+++ b/css/styles.css
@@ -11,12 +11,12 @@ body {
   justify-content: center;
 }
 .header__logo {
-  padding-top: 20px;
+  padding-top: 15px;
 }
 
 .intro {
   text-align: center;
-  padding: 18px;
+  padding: 15px;
 }
 .intro__location {
   display: flex;
@@ -31,7 +31,7 @@ body {
   color: #3b3a39;
 }
 .intro__location-text {
-  font-size: 40px;
+  font-size: 20px;
   color: #3b3a39;
   font-weight: bolder;
 }
@@ -40,27 +40,27 @@ body {
   padding: 30px;
 }
 .intro__title {
-  font-size: 57px;
-  margin-bottom: 25px;
+  font-size: 28px;
+  margin-bottom: 10px;
 }
 .intro__description {
-  font-size: 30px;
+  font-size: 18px;
   margin-bottom: 30px;
 }
 .intro__button {
   background: linear-gradient(#9356DC, #FF79DA);
-  border-radius: 50px;
-  padding: 28px 38px;
-  font-size: 38px;
+  border-radius: 25px;
+  padding: 15px 25px;
+  font-size: 18px;
   color: #fff;
-  margin-top: 30px;
-  margin-bottom: 30px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   cursor: pointer;
   font-family: "roboto";
 }
 
 .fonctionnement {
-  padding: 40px 20px;
+  padding: 20px 10px;
   background-color: #f2f2f2;
 }
 .fonctionnement__title {
@@ -109,7 +109,7 @@ body {
 }
 
 .restaurants {
-  padding: 50px 10px;
+  padding: 20px 10px;
   background-color: white;
 }
 .restaurants__title {
@@ -136,20 +136,26 @@ body {
   object-fit: cover;
 }
 .restaurants .restaurant__info {
-  align-items: center;
+  padding: 15px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
 }
 .restaurants .restaurant__name {
   font-size: 20px;
   font-weight: bold;
 }
+.restaurants .restaurant__bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 .restaurants .restaurant__location {
   font-size: 16px;
 }
 .restaurants .restaurant__heart {
-  font-size: 24px;
+  font-size: 20px;
   cursor: pointer;
-  display: flex;
-  justify-content: space-between;
 }
 
 .footer {
