finalisation scss + début responsive

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -17,6 +17,11 @@ body {
   
   &__logo {
     padding-top: 15px;
+    max-width: 215px;
+  }
+
+  img {
+    width: 100%;
   }
 }
 
@@ -58,6 +63,7 @@ body {
   &__description {
     font-size: 18px;
     margin-bottom: 30px;
+    font-weight: 200;
   }
   
   &__button {
@@ -70,6 +76,8 @@ body {
     margin-bottom: 10px;
     cursor: pointer;
     font-family: "roboto";
+    border: 0;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   }
 
 }
@@ -77,7 +85,6 @@ body {
 
 .fonctionnement {
   padding: 20px 10px;
-  background-color: #f2f2f2;
 
   &__title {
     font-size: 26px;
@@ -95,37 +102,43 @@ body {
     display: flex;
     align-items: center;
     background: white;
-    padding: 25px;
+    padding: 8px 12px;
     border-radius: 15px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 6px 16px rgba(0, 0, 0, 0.2);
     position: relative;
+    transition: background-color 0.3s ease;
 
     &__number {
       position: absolute;
-      margin-right: 20px;
-      left: -10px;
+      left: -12px;
       top: 50%;
       transform: translateY(-50%);
       background-color: $main-color;
       color: white;
-      width: 25px;
-      height: 25px;
+      width: 24px;
+      height: 24px;
       display: flex;
       align-items: center;
       justify-content: center;
       border-radius: 50%;
-      font-size: 14px;
+      font-size: 13px;
     }
 
     &__icon {
-      font-size: 20px;
-      color: $main-color;
-      margin-right: 15px;
+      font-size: 18px;
+      color: gray;
+      margin-right: 20px;
+      margin-left: 15px;
+      transition: color 0.3s ease;
     }
 
     &__text {
       font-size: 18px;
       font-weight: 500;
+    }
+
+    &:hover .step__icon {
+      color: $main-color;
     }
   }
 }
@@ -133,8 +146,9 @@ body {
 
 
 .restaurants {
-  padding: 20px 10px;
+  padding: 10px 10px;
   background-color: white;
+  margin-bottom: 18px;
 
   &__title {
     font-size: 28px;
@@ -156,6 +170,18 @@ body {
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
     cursor: pointer;
 
+    .restaurant__new {
+      position: absolute;
+      top: 15px;
+      right: 10px;
+      background-color: rgba(153, 226, 208, 1);
+      color: rgba(0, 135, 102, 1);
+      font-size: 13px;
+      font-weight: 500;
+      padding: 5px 10px;
+      border-radius: 2px;
+    }    
+
     &__image {
       width: 100%;
       height: 180px;
@@ -172,6 +198,7 @@ body {
     &__name {
       font-size: 20px;
       font-weight: bold;
+      margin: 0;
     }
 
     &__bottom {
@@ -182,11 +209,18 @@ body {
 
     &__location {
       font-size: 16px;
+      margin: 0;
     }
 
     &__heart {
-      font-size: 20px;
+      font-size: 23px;
+      margin-top: -42px;
+      margin-right: 12px;
       cursor: pointer;
+
+      i {
+        font-weight: 400;
+      }
     }
   }
 }
@@ -221,3 +255,22 @@ body {
 }
 
 
+@media screen and (min-width: 1024px) {
+
+  body {
+    max-width: 1440px;
+    margin: 0 auto;
+  }
+
+  .fonctionnement__steps {
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 30px;
+  }
+
+  .step {
+    flex: 1;
+  }
+  
+  
+}
