--- a/css/menu.css
+++ b/css/menu.css
@@ -4,6 +4,7 @@
 
 body {
   font-family: "Roboto", sans-serif;
+  background-color: rgb(246, 246, 246);
 }
 
 .header {
@@ -33,10 +34,16 @@ body {
   padding: 0px 15px;
 }
 
+.menu__img {
+  position: relative;
+  overflow: hidden;
+  background-color: white;
+}
 .menu__img img {
   width: 100%;
   height: 250px;
   object-fit: cover;
+  display: block;
 }
 
 .menu__info {
@@ -44,14 +51,17 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 20px;
-  background-color: white;
-  border-radius: 20px 20px 0 0;
+  background-color: rgb(246, 246, 246);
   position: relative;
+  border-radius: 30px 30px 0 0;
+  margin-top: -30px;
 }
 
 .menu__name {
   font-family: "Shrikhand";
-  font-size: 29px;
+  font-weight: 400;
+  font-size: 28px;
+  line-height: 100%;
 }
 
 .menu__heart {
@@ -61,6 +71,7 @@ body {
 
 .menu__category {
   padding: 20px;
+  background-color: rgb(246, 246, 246);
 }
 
 .menu__category-title {
@@ -80,7 +91,7 @@ body {
 
 .menu__item {
   background: white;
-  padding: 15px;
+  padding: 18px;
   border-radius: 15px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   display: flex;
@@ -94,10 +105,13 @@ body {
 .menu__item-name {
   font-weight: bold;
   font-size: 16px;
+  margin: 0;
 }
 .menu__item-description {
   font-size: 14px;
   color: gray;
+  margin: 0;
+  margin-top: 4px;
 }
 .menu__item-price {
   font-weight: bold;
@@ -106,7 +120,9 @@ body {
 
 .button__intro {
   background: linear-gradient(#9356DC, #FF79DA);
+  color: rgb(255, 255, 255);
   border-radius: 50px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   padding: 15px 25px;
   font-size: 18px;
   text-align: center;
