--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,10 @@ body {
 }
 .header__logo {
   padding-top: 15px;
+  max-width: 215px;
+}
+.header img {
+  width: 100%;
 }
 
 .intro {
@@ -46,6 +50,7 @@ body {
 .intro__description {
   font-size: 18px;
   margin-bottom: 30px;
+  font-weight: 200;
 }
 .intro__button {
   background: linear-gradient(#9356DC, #FF79DA);
@@ -57,11 +62,12 @@ body {
   margin-bottom: 10px;
   cursor: pointer;
   font-family: "roboto";
+  border: 0;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 }
 
 .fonctionnement {
   padding: 20px 10px;
-  background-color: #f2f2f2;
 }
 .fonctionnement__title {
   font-size: 26px;
@@ -77,40 +83,46 @@ body {
   display: flex;
   align-items: center;
   background: white;
-  padding: 25px;
+  padding: 8px 12px;
   border-radius: 15px;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 6px 16px rgba(0, 0, 0, 0.2);
   position: relative;
+  transition: background-color 0.3s ease;
 }
 .fonctionnement .step__number {
   position: absolute;
-  margin-right: 20px;
-  left: -10px;
+  left: -12px;
   top: 50%;
   transform: translateY(-50%);
   background-color: #9356DC;
   color: white;
-  width: 25px;
-  height: 25px;
+  width: 24px;
+  height: 24px;
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 50%;
-  font-size: 14px;
+  font-size: 13px;
 }
 .fonctionnement .step__icon {
-  font-size: 20px;
-  color: #9356DC;
-  margin-right: 15px;
+  font-size: 18px;
+  color: gray;
+  margin-right: 20px;
+  margin-left: 15px;
+  transition: color 0.3s ease;
 }
 .fonctionnement .step__text {
   font-size: 18px;
   font-weight: 500;
 }
+.fonctionnement .step:hover .step__icon {
+  color: #9356DC;
+}
 
 .restaurants {
-  padding: 20px 10px;
+  padding: 10px 10px;
   background-color: white;
+  margin-bottom: 18px;
 }
 .restaurants__title {
   font-size: 28px;
@@ -130,6 +142,17 @@ body {
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   cursor: pointer;
 }
+.restaurants .restaurant .restaurant__new {
+  position: absolute;
+  top: 15px;
+  right: 10px;
+  background-color: rgb(153, 226, 208);
+  color: rgb(0, 135, 102);
+  font-size: 13px;
+  font-weight: 500;
+  padding: 5px 10px;
+  border-radius: 2px;
+}
 .restaurants .restaurant__image {
   width: 100%;
   height: 180px;
@@ -144,6 +167,7 @@ body {
 .restaurants .restaurant__name {
   font-size: 20px;
   font-weight: bold;
+  margin: 0;
 }
 .restaurants .restaurant__bottom {
   display: flex;
@@ -152,10 +176,16 @@ body {
 }
 .restaurants .restaurant__location {
   font-size: 16px;
+  margin: 0;
 }
 .restaurants .restaurant__heart {
-  font-size: 20px;
+  font-size: 23px;
+  margin-top: -42px;
+  margin-right: 12px;
   cursor: pointer;
+}
+.restaurants .restaurant__heart i {
+  font-weight: 400;
 }
 
 .footer {
@@ -180,6 +210,21 @@ body {
 }
 .footer i {
   font-size: 14px;
+}
+
+@media screen and (min-width: 1024px) {
+  body {
+    max-width: 1440px;
+    margin: 0 auto;
+  }
+  .fonctionnement__steps {
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 30px;
+  }
+  .step {
+    flex: 1;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
