--- a/sass/menu.scss
+++ b/sass/menu.scss
@@ -8,6 +8,7 @@ $third-color: #99E2D0;
 
 body {
   font-family: "Roboto", sans-serif;
+  background-color: rgba(246, 246, 246, 1);
 }
 
 
@@ -42,11 +43,19 @@ body {
 }
 
 
-.menu__img img {
-  width: 100%;
-  height: 250px;
-  object-fit: cover;
+.menu__img {
+  position: relative;
+  overflow: hidden;
+  background-color: white;
+
+  img {
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+    display: block;
+  }
 }
+
 
 
 .menu__info {
@@ -54,14 +63,17 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 20px;
-  background-color: white;
-  border-radius: 20px 20px 0 0;
+  background-color: rgba(246, 246, 246, 1);
   position: relative;
+  border-radius: 30px 30px 0 0;
+  margin-top: -30px;
 }
 
 .menu__name {
   font-family: "Shrikhand";
-  font-size: 29px;
+  font-weight: 400;
+  font-size: 28px;
+  line-height: 100%;
 }
 
 .menu__heart {
@@ -72,6 +84,7 @@ body {
 
 .menu__category {
   padding: 20px;
+  background-color: rgba(246, 246, 246, 1);
 }
 
 .menu__category-title {
@@ -92,7 +105,7 @@ body {
 
 .menu__item {
   background: white;
-  padding: 15px;
+  padding: 18px;
   border-radius: 15px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   display: flex;
@@ -107,23 +120,27 @@ body {
   &-name {
     font-weight: bold;
     font-size: 16px;
+    margin: 0;
   }
 
   &-description {
     font-size: 14px;
     color: gray;
+    margin: 0;
+    margin-top: 4px;
   }
 
   &-price {
     font-weight: bold;
     font-size: 16px;
-  }
+  }  
 }
-
 
 .button__intro {
   background: linear-gradient($main-color, $second-color);
+  color: rgba(255, 255, 255, 1);
   border-radius: 50px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   padding: 15px 25px;
   font-size: 18px;
   text-align: center;
