--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -10,11 +10,10 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
-
 .header {
   display: flex;
   justify-content: center;
-  
+
   &__logo {
     padding-top: 15px;
     max-width: 215px;
@@ -25,11 +24,10 @@ body {
   }
 }
 
-
 .intro {
   text-align: center;
   padding: 15px;
-  
+
   &__location {
     display: flex;
     align-items: center;
@@ -37,13 +35,13 @@ body {
     background-color: lightgrey;
     box-shadow: 0 7px 10px rgba(0, 0, 0, 0.3);
   }
-  
+
   &__location-icon {
     margin-right: 20px;
     font-size: 25px;
     color: #3b3a39;
   }
-  
+
   &__location-text {
     font-size: 20px;
     color: #3b3a39;
@@ -54,18 +52,18 @@ body {
     background-color: #f2f2f2;
     padding: 30px;
   }
-  
+
   &__title {
     font-size: 28px;
     margin-bottom: 10px;
   }
-  
+
   &__description {
     font-size: 18px;
     margin-bottom: 30px;
-    font-weight: 200;
+    font-weight: 300;
   }
-  
+
   &__button {
     background: linear-gradient($main-color, $second-color);
     border-radius: 25px;
@@ -80,8 +78,15 @@ body {
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   }
 
-}
+  .intro__button {
+    transition: filter 0.3s ease, box-shadow 0.3s ease;
 
+    &:hover {
+      filter: brightness(1.1);
+      box-shadow: 0px 6px 16px rgba(0, 0, 0, 0.2);
+    }
+  }
+}
 
 .fonctionnement {
   padding: 20px 10px;
@@ -143,8 +148,6 @@ body {
   }
 }
 
-
-
 .restaurants {
   padding: 10px 10px;
   background-color: white;
@@ -180,7 +183,7 @@ body {
       font-weight: 500;
       padding: 5px 10px;
       border-radius: 2px;
-    }    
+    }
 
     &__image {
       width: 100%;
@@ -223,8 +226,41 @@ body {
       }
     }
   }
-}
 
+  .restaurant__heart {
+    position: relative;
+
+    &::after {
+      content: '\f004';
+      font-family: "Font Awesome 6 Free";
+      font-weight: 900;
+      color: $main-color;
+      position: absolute;
+      left: 0;
+      opacity: 0;
+      transform: scale(0.1);
+      transition: opacity 0.7s ease, transform 0.7s ease;
+    }
+
+    .fa-regular {
+      opacity: 1;
+      transform: scale(1);
+      transition: opacity 0.7s ease, transform 0.7s ease;
+    }
+
+    &:hover {
+      &::after {
+        opacity: 1;
+        transform: scale(1);
+      }
+
+      .fa-regular {
+        opacity: 0;
+        transform: scale(0.1);
+      }
+    }
+  }
+}
 
 .footer {
   background: rgba(53, 53, 53, 1);
@@ -254,23 +290,75 @@ body {
   }
 }
 
-
 @media screen and (min-width: 1024px) {
-
   body {
     max-width: 1440px;
     margin: 0 auto;
   }
 
+  .intro__content {
+    padding: 50px 100px;
+  }
+
+  .intro__title {
+    font-size: 36px;
+  }
+
+  .fonctionnement {
+    max-width: 1100px;
+
+    &__title {
+      padding-left: 0;
+    }
+  }
+
   .fonctionnement__steps {
     flex-direction: row;
-    justify-content: space-between;
-    gap: 30px;
-  }
+    justify-content: center;
+    gap: 35px;
+    max-width: 1100px;
+    margin: 0 auto;
+  }  
 
   .step {
     flex: 1;
+    max-width: 330px;
   }
-  
-  
+
+  .step__number {
+    left: 0;
+  }  
+
+  .restaurants__cards {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 50px 100px;
+  }
+
+  .restaurant {
+    width: calc(50% - 50px);
+  }
+}
+
+.footer {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: flex-start;
+  align-items: flex-end;
+  gap: 40px;
+  padding: 15px 20px 10px 20px;
+
+  &__logo {
+    margin-bottom: 0;
+    font-size: 16px;
+    padding-left: 40px;
+  }
+
+  &__menu {
+    display: flex;
+    flex-direction: row;
+    p:nth-child(1) { margin-right: 10px; }
+    p:nth-child(2) { margin-right: 40px; }
+    p:nth-child(3) { margin-right: 15px; }
+  }
 }
