--- a/css/menu.css
+++ b/css/menu.css
@@ -91,15 +91,42 @@ body {
 
 .menu__item {
   background: white;
-  padding: 18px;
   border-radius: 15px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   display: flex;
   justify-content: space-between;
-  align-items: center;
   opacity: 0;
   transform: translateY(20px);
   animation: fadeSlideIn 0.8s ease forwards;
+  box-sizing: border-box;
+}
+.menu__item > div:first-child {
+  padding: 18px;
+}
+.menu__item .menu__main {
+  flex: 1;
+}
+.menu__item .menu__item-check {
+  background-color: rgb(153, 226, 208);
+  border-radius: 0 12px 12px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 0px;
+  overflow: hidden;
+  transition: width 0.4s ease-in-out;
+}
+.menu__item .menu__item-check i {
+  color: white;
+  padding: 15px;
+}
+.menu__item .menu__item-price {
+  display: flex;
+  padding: 18px;
+  align-items: center;
+}
+.menu__item:hover .menu__item-check {
+  width: 60px;
 }
 .menu__item:nth-child(1) {
   animation-delay: 0.2s;
@@ -183,12 +210,6 @@ body {
   font-size: 14px;
 }
 
-.menu__item-check i {
-  transform: translateX(20px);
-  opacity: 0;
-  transition: transform 0.4s ease, opacity 0.4s ease;
-}
-
 .menu__heart {
   position: relative;
 }
@@ -220,15 +241,6 @@ body {
 @media screen and (min-width: 1024px) {
   body {
     background-color: white;
-  }
-  .menu__item:hover .menu__item-check i {
-    transform: translateX(0);
-    opacity: 1;
-  }
-  .menu__item:hover .menu__item-check i {
-    background-color: rgb(153, 226, 208);
-    color: white;
-    padding: 15px;
   }
   .menu__img img {
     height: 500px;
