--- a/sass/menu.scss
+++ b/sass/menu.scss
@@ -56,8 +56,6 @@ body {
   }
 }
 
-
-
 .menu__info {
   display: flex;
   justify-content: space-between;
@@ -133,6 +131,8 @@ body {
       i {
         color: white;
         padding: 15px;
+        font-size: 23px;
+        font-weight: 900;
       }    
   }
 
