--- a/css/styles.css
+++ b/css/styles.css
@@ -229,7 +229,7 @@ body {
 }
 .footer__logo {
   font-family: "Shrikhand";
-  font-size: 18px;
+  font-size: 15px;
   margin-bottom: 20px;
 }
 .footer__menu {
@@ -247,7 +247,7 @@ body {
 }
 
 @media screen and (min-width: 1024px) {
-  body {
+  .main {
     max-width: 1440px;
     margin: 0 auto;
   }
@@ -295,8 +295,9 @@ body {
   }
   .footer__logo {
     margin-bottom: 0;
-    font-size: 16px;
+    font-size: 12px;
     padding-left: 40px;
+    margin-top: 20px;
   }
   .footer__menu {
     display: flex;
