ajout fichier texte liens git

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -6,6 +6,13 @@ $third-color: #99E2D0;
   box-sizing: border-box;
 }
 
+.main {
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 0 1.5rem;
+}
+
+
 body {
   font-family: "Roboto", sans-serif;
 }
@@ -349,8 +356,7 @@ body {
     flex-direction: row;
     justify-content: center;
     gap: 35px;
-    max-width: 1100px;
-    margin: 0 auto;
+    margin-right: 30px;
   }  
 
   .step {
