--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -6,13 +6,6 @@ $third-color: #99E2D0;
   box-sizing: border-box;
 }
 
-.main {
-  max-width: 1440px;
-  margin: 0 auto;
-  padding: 0 1.5rem;
-}
-
-
 body {
   font-family: "Roboto", sans-serif;
 }
@@ -346,6 +339,8 @@ body {
 
   .fonctionnement {
     max-width: 1100px;
+    margin: 0 auto;
+    padding: 0;
 
     &__title {
       padding-left: 0;
@@ -353,10 +348,11 @@ body {
   }
 
   .fonctionnement__steps {
+    display: flex;
     flex-direction: row;
     justify-content: center;
     gap: 35px;
-    margin-right: 30px;
+    margin: 0 auto;
   }  
 
   .step {
@@ -368,39 +364,49 @@ body {
     left: 0;
   }  
 
+  .restaurants {
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 0;
+  }
+
   .restaurants__cards {
+    display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     gap: 50px 100px;
+    margin: 0 auto;
   }
 
   .restaurant {
     width: calc(50% - 50px);
+    margin-bottom: 35px;
   }
 
   .footer {
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: flex-start;
-  align-items: flex-end;
-  gap: 40px;
-  padding: 15px 20px 10px 20px;
-
-  &__logo {
-    margin-bottom: 0;
-    font-size: 12px;
-    padding-left: 40px;
-    margin-top: 20px;
-  }
-
-  &__menu {
     display: flex;
-    flex-direction: row;
-    p:nth-child(1) { margin-right: 10px; }
-    p:nth-child(2) { margin-right: 40px; }
-    p:nth-child(3) { margin-right: 15px; }
+    flex-direction: row-reverse;
+    justify-content: flex-start;
+    align-items: flex-end;
+    gap: 40px;
+    padding: 15px 20px 10px 20px;
+
+    &__logo {
+      margin-bottom: 0;
+      font-size: 12px;
+      padding-left: 40px;
+      margin-top: 20px;
+    }
+
+    &__menu {
+      display: flex;
+      flex-direction: row;
+      p:nth-child(1) { margin-right: 10px; }
+      p:nth-child(2) { margin-right: 40px; }
+      p:nth-child(3) { margin-right: 15px; }
+    }
   }
 }
-}
+
 
 
