--- a/sass/menu.scss
+++ b/sass/menu.scss
@@ -147,7 +147,19 @@ body {
   }
 
   .menu__main {
-    flex: 1;
+    flex: 1 1 0;
+    min-width: 0;
+  }
+
+  &-name {
+    font-weight: bold;
+    font-size: 16px;
+    margin: 0;
+
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: block;
   }
 
   .menu__item-check {
@@ -185,17 +197,6 @@ body {
   &-text {
     display: flex;
     flex-direction: column;
-  }
-
-  &-name {
-    font-weight: bold;
-    font-size: 16px;
-    margin: 0;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: block;      // assure un bloc plein largeur
-    width: 100%;         // pour que text-overflow sache où couper
   }
 
   &-description {
